--- a/fe-designer-dragdrop/src/app/app.less
+++ b/fe-designer-dragdrop/src/app/app.less
@@ -69,11 +69,11 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  width: 24px;
-  height: 80px;
+  width: 16px;
+  height: 48px;
   background-color: @primary;
   color: @primary-foreground;
-  border: 2px solid @primary;
+  border: 1px solid @primary;
   border-radius: 0;
   box-shadow: @shadow-lg;
   display: flex;
@@ -83,19 +83,21 @@
   z-index: @z-fixed;
   transition: all @transition-normal;
   outline: none;
+  opacity: 0.7;
   
   &:hover {
     background-color: @primary;
-    opacity: 0.9;
+    opacity: 1;
+    width: 18px;
   }
 
   &:active {
-    opacity: 1;
+    opacity: 0.9;
   }
 
   span {
-    font-size: 14px;
-    font-weight: bold;
+    font-size: 12px;
+    font-weight: normal;
   }
 }
 
