Add Clear button to Repeat Binding variables dialog.

--- a/fe-designer-dragdrop/src/app/designer/table-element/table-element.html
+++ b/fe-designer-dragdrop/src/app/designer/table-element/table-element.html
@@ -203,6 +203,7 @@
     [initialIterator]="getRepeatBindingForSelection()?.iteratorName"
     [initialRepeatedElement]="getRepeatBindingForSelection()?.repeatedElement"
     (saved)="onRepeatBindingSaved($event)"
+    (cleared)="onRepeatBindingCleared()"
     (closed)="onRepeatBindingClosed()"
   ></app-repeat-binding-dialog>
 }
