--- a/fe-designer-dragdrop/src/app/designer/table-element/repeat-binding-dialog.html
+++ b/fe-designer-dragdrop/src/app/designer/table-element/repeat-binding-dialog.html
@@ -85,6 +85,7 @@
       </form>
     </div>
     <div class="dialog-footer">
+      <button *ngIf="initialBinding" type="button" class="button button-secondary" (click)="onClearClicked()">Clear</button>
       <button type="button" class="button button-secondary" (click)="onCancelClicked()">Cancel</button>
       <button type="button" class="button button-primary" [disabled]="!canSave()" (click)="onSaveClicked($event)">Save</button>
     </div>
