Constrain Layout Table resizability to vertical, via options.

--- a/fe-designer-dragdrop/src/app/layout/toolbar-panel/toolbar-panel.html
+++ b/fe-designer-dragdrop/src/app/layout/toolbar-panel/toolbar-panel.html
@@ -22,8 +22,7 @@
                   [attr.data-testid]="'element-' + element.type">
                   <div class="element-preview">
                     @switch (element.type) {
-                      @case ('div') { <div class="container-preview">Div</div> }
-                      @case ('table') { <div class="container-preview">Define Layout</div> }
+                      @case ('table') { <div class="container-preview">Layout Rectangle</div> }
                     }
                   </div>
                 </div>
