--- a/fe-designer-dragdrop/src/app/designer/table-element/cell-editor-dialog.less
+++ b/fe-designer-dragdrop/src/app/designer/table-element/cell-editor-dialog.less
@@ -128,9 +128,12 @@
   align-items: center;
   font-size: 11px;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: transparent;
+  background-color: rgba(255,204,0,0.08);
   text-align: center;
+  position: relative;
+  cursor: pointer;
 }
+:host ::ng-deep p[data-type="logo-placeholder"].lp-selected { outline: 2px dashed #ff9900; outline-offset: 2px; background-color: rgba(255,204,0,0.15); }
 
 :host ::ng-deep .ql-toolbar button.ql-logo-placeholder { display:inline-flex;align-items:center;justify-content:center; }
 :host ::ng-deep .ql-toolbar button.ql-logo-placeholder .ql-logo-icon { font-size:11px;font-weight:600;letter-spacing:.5px; }
