--- a/fe-designer-dragdrop/src/app/layout/menu-bar/menu-bar.html
+++ b/fe-designer-dragdrop/src/app/layout/menu-bar/menu-bar.html
@@ -21,6 +21,10 @@
           <span>Save Report</span>
           <span class="shortcut">Ctrl+S</span>
         </button>
+        <button class="dropdown-item" (click)="handlePublishTemplate()" data-testid="menu-file-save">
+          <span>Publish Template</span>
+          <span class="shortcut">Ctrl+P</span>
+        </button>
         <button class="dropdown-item" (click)="handleExportAsXhtml()" data-testid="menu-file-save">
           <span>Export as Xhtml</span>
           <span class="shortcut">Ctrl+E</span>
