Prefill xhtml name on export.

--- a/fe-designer-dragdrop/src/app/app.html
+++ b/fe-designer-dragdrop/src/app/app.html
@@ -66,6 +66,7 @@
 <!-- Dialogs -->
 <app-save-dialog
   [isOpen]="showSaveDialog()"
+  [initialFileName]="exportDefaultFileName()"
   (onClose)="closeSaveDialog()"
   (onExportAsXhtml)="handleSave($event)">
 </app-save-dialog>
