Adding minification on Export.

--- a/fe-designer-dragdrop/src/app/layout/save-dialog/save-dialog.html
+++ b/fe-designer-dragdrop/src/app/layout/save-dialog/save-dialog.html
@@ -20,6 +20,18 @@
           data-testid="input-file-name"
           autofocus
         />
+        <div class="minify-option">
+          <label for="minify-xhtml">
+            <input
+              id="minify-xhtml"
+              type="checkbox"
+              [ngModel]="minifyXhtml()"
+              (ngModelChange)="minifyXhtml.set($event)"
+              data-testid="checkbox-minify-xhtml"
+            />
+            Minify Xhtml
+          </label>
+        </div>
       </div>
 
       <div class="dialog-footer">
